Corrección de errores en las implementaciones de lib aplicaciones y en las interfaces de lib presentaciones, ademas de la inclusion de algunas ventanas de la pagina

--- a/asp_presentaciones/Pages/Ventanas/Reservas.cshtml
+++ b/asp_presentaciones/Pages/Ventanas/Reservas.cshtml
@@ -1,16 +1,16 @@
 ﻿@page
-@model asp_presentacion.Pages.Ventanas.DistribuidoresModel
+@model asp_presentacion.Pages.Ventanas.ReservasModel
 @{
     ViewData["Titulo"] = "";
 }
 <center>
     <div>
         <form method="POST"
-            enctype="multipart/form-data">
+              enctype="multipart/form-data">
             @Html.AntiForgeryToken()
 
             <div align="left">
-                <h3>Distribuidores</h3>
+                <h3>Reservas</h3>
             </div>
             <div align="left"
                  class="bt_panel_buttons">
@@ -29,7 +29,7 @@
                        asp-page-handler="BtGuardar"
                        class="btn btn-secondary"
                        disabled="@(Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Listas)" />
-                <input type="submit"
+                <input type="submit" 
                        value="Cancelar"
                        asp-page-handler="BtCancelar"
                        class="btn btn-secondary"
@@ -40,18 +40,22 @@
             Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Borrar)
             {
                 <input type="hidden"
-                    asp-for="@Model.Actual!.Id" />
+                       asp-for="@Model.Actual!.Id_Reserva" />
             }
             @if (Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Borrar)
             {
                 <input type="hidden"
-                   asp-for="@Model.Actual!.Codigo" />
+                       asp-for="@Model.Actual!.Id_Reserva" />
                 <input type="hidden"
-                   asp-for="@Model.Actual!.Nombre" />
+                       asp-for="@Model.Actual!.Id_Huesped" />
                 <input type="hidden"
-                   asp-for="@Model.Actual!.Dirreccion" />
+                       asp-for="@Model.Actual!.Id_Sede" />
                 <input type="hidden"
-                   asp-for="@Model.Actual!.Telefono" />
+                       asp-for="@Model.Actual!.Estado_Actual" />
+                <input type="hidden"
+                       asp-for="@Model.Actual!.Fecha_Reserva" />
+                <input type="hidden"
+                       asp-for="@Model.Actual!.Numero_Huespedes" />
             }
 
             @if (Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Editar)
@@ -62,42 +66,62 @@
                     <div>
                         <div class="form-group">
                             <label class="col-lg-4 control-label">
-                                Codigo
+                                Id_Reserva
                             </label>
                             <div class="col-lg-6">
                                 <input id="nmEstudiante"
-                                   class="cts_forms form-control"
-                                   asp-for="@Model.Actual!.Codigo" />
+                                       class="cts_forms form-control"
+                                       asp-for="@Model.Actual!.Id_Reserva" />
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-lg-4 control-label">
-                                Nombre
+                                Id_Huesped
                             </label>
                             <div class="col-lg-6">
                                 <input id="nmMateria"
-                                   class="cts_forms form-control"
-                                   asp-for="@Model.Actual!.Nombre" />
+                                       class="cts_forms form-control"
+                                       asp-for="@Model.Actual!.Id_Huesped" />
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-lg-4 control-label">
-                                Telefono
+                                Id_Sede
                             </label>
                             <div class="col-lg-6">
                                 <input id="nmNota1"
-                                   class="cts_forms form-control"
-                                   asp-for="@Model.Actual!.Telefono" />
+                                       class="cts_forms form-control"
+                                       asp-for="@Model.Actual!.Id_Sede" />
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-lg-4 control-label">
-                                Dirreccion
+                                Estado_Actual
                             </label>
                             <div class="col-lg-6">
                                 <input id="nmNota2"
-                                   class="cts_forms form-control"
-                                   asp-for="@Model.Actual!.Dirreccion" />
+                                       class="cts_forms form-control"
+                                       asp-for="@Model.Actual!.Estado_Actual" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-lg-4 control-label">
+                                Fecha_Reserva
+                            </label>
+                            <div class="col-lg-6">
+                                <input id="nmNota2"
+                                       class="cts_forms form-control"
+                                       asp-for="@Model.Actual!.Fecha_Reserva" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-lg-4 control-label">
+                                Numero_Huespedes
+                            </label>
+                            <div class="col-lg-6">
+                                <input id="nmNota2"
+                                       class="cts_forms form-control"
+                                       asp-for="@Model.Actual!.Numero_Huespedes" />
                             </div>
                         </div>
                     </div>
@@ -107,8 +131,9 @@
             @if (ViewData.ContainsKey("Mensaje"))
             {
                 <input type="hidden"
-                   asp-for="@Model.Accion" />
-                    @await Html.PartialAsync("../Emergentes/Mensajes.cshtml");
+                       asp-for="@Model.Accion" />
+                @await Html.PartialAsync("../Emergentes/Mensajes.cshtml")
+                ;
             }
 
             @if (Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Borrar)
@@ -124,19 +149,23 @@
                                 Desea borrar la entidad?
                             </h4>
                             <h6 align="left">
-                                @Model.Actual!.Codigo, 
-                                @Model.Actual!.Nombre
+                                @Model.Actual!.Id_Reserva,
+                                @Model.Actual!.Id_Huesped,
+                                @Model.Actual!.Id_Sede,
+                                @Model.Actual!.Estado_Actual,
+                                @Model.Actual!.Fecha_Reserva,
+                                @Model.Actual!.Numero_Huespedes,
                             </h6>
                             <br />
                             <br />
                             <input type="submit"
-                               value="Borrar"
-                               asp-page-handler="BtBorrar"
-                               class="btn btn-secondary" />
+                                   value="Borrar"
+                                   asp-page-handler="BtBorrar"
+                                   class="btn btn-secondary" />
                             <input type="submit"
-                               value="Cerrar"
-                               asp-page-handler="BtCancelar"
-                               class="btn btn-secondary" />
+                                   value="Cerrar"
+                                   asp-page-handler="BtCancelar"
+                                   class="btn btn-secondary" />
                         </div>
                     </div>
                 </div>
@@ -146,29 +175,33 @@
             Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Borrar)
             {
                 <input id="flNombre"
-                   class="cts_forms form-control"
-                   asp-for="@Model.Filtro!.Codigo"
-                   placeholder="Nombre" />
+                       class="cts_forms form-control"
+                       asp-for="@Model.Filtro!.Id_Reserva"
+                       placeholder="Nombre" />
                 <br />
 
                 <div class="containers_vn panel panel-default">
                     <table class="tb_data table table-striped table-bordered table-hover">
                         <tr>
                             <th>
-                                Codigo
+                                Id_Reserva
                             </th>
                             <th>
-                                Nombre
+                                Id_Reserva
                             </th>
                             <th class="cl_hidden">
-                                Telefono
+                                Id_Sede
                             </th>
                             <th class="cl_actions">
-                                Dirreccion
+                                Estado_Actual
                             </th>
                             <th class="cl_actions">
-                                Accion
+                                Fecha_Reserva
                             </th>
+                            <th class="cl_actions">
+                                Numero_Huespedes
+                            </th>
+
                         </tr>
                         @if (Model != null && Model.Lista != null)
                         {
@@ -176,28 +209,38 @@
                             {
                                 <tr>
                                     <td>
-                                        @elemento.Codigo
+                                        @elemento.Id_Reserva
+
                                     </td>
                                     <td>
-                                        @elemento.Nombre
+                                        @elemento.Id_Huesped
+
                                     </td>
                                     <td class="cl_hidden">
-                                        @elemento.Telefono
+                                        @elemento.Id_Sede
+
                                     </td>
                                     <td class="cl_hidden">
-                                        @elemento.Dirreccion
+                                        @elemento.Estado_Actual
+                                    </td>
+                                    
+                                    <td class="cl_hidden">
+                                        @elemento.Fecha_Reserva
+                                    </td>
+                                    <td class="cl_hidden">
+                                        @elemento.Numero_Huespedes
                                     </td>
                                     <td>
                                         <input type="submit"
-                                           value="Modicar"
-                                           asp-page-handler="BtModificar"
-                                           class="btn btn-secondary"
-                                           asp-route-data="@elemento.Id" />
+                                               value="Modicar"
+                                               asp-page-handler="BtModificar"
+                                               class="btn btn-secondary"
+                                               asp-route-data="@elemento.Id_Reserva" />
                                         <input type="submit"
-                                           value="Borrar"
-                                           asp-page-handler="BtBorrarVal"
-                                           class="btn btn-secondary"
-                                           asp-route-data="@elemento.Id" />
+                                               value="Borrar"
+                                               asp-page-handler="BtBorrarVal"
+                                               class="btn btn-secondary"
+                                               asp-route-data="@elemento.Id_Huesped" />
                                     </td>
                                 </tr>
                             }
